--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $lightgray: rgba(245, 245, 245, 0.25);
 $orange: #e8a534;
 $blue: #68a0b7;
 $darkgray: rgba(0, 0, 0, 0.8);
+$white: #ffffff;
 
 // Elemental damage types
 $arc: #85c5ec;
